--- a/src/Components/Pages/Settings/settings.css
+++ b/src/Components/Pages/Settings/settings.css
@@ -39,6 +39,7 @@
   vertical-align: middle;
   margin: 5px;
   cursor: pointer;
+  font-size: 1rem;
 }
 .checkbox-custom + .checkbox-custom-label:before {
   content: '';
